<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeDrive</string>
    <string name="title_section1">Dashboard</string>
    <string name="title_section2">My Location</string>
    <string name="title_section3">History</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth_string">Bluetooth</string>
    <string name="fb">Share</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="display_violations">Violations For Last 7 Days</string>
    <string name="display_date">Date</string>
    <string name="display_vln">Violations</string>
    <string name="Activate">Activate Client Bluetooth</string>
    <string name="Enter">Enter</string>
    <string name="ShowPDev">Show paired Devices</string>
    <string name="DiscoverDev">Discover Devices</string>
    <string name="Connect">Connect</string>
    <string name="pick_color">Select your action</string>
    
    <string-array name="colors_array">
        <item>Traffic</item>
        <item>Block</item>
    </string-array>
    
    <string-array name="spinnerItems">
        <item>MPH</item>
        <item>KmPH</item>
       
    </string-array>
    
    <string name="app_id">558707017572872</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="speed_limit">Speed Limit</string>

</resources>
