<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.cmu.MobAppsafedrive.MainActivity" >

     <item
        android:id="@+id/item1"
        android:orderInCategory="97"
        android:title="@string/bluetooth_string"
        app:showAsAction="always"
        android:icon="@drawable/bluetooth_grey" 
        android:menuCategory="container"/>
              
      <item
        android:id="@+id/item2"
        android:orderInCategory="98"
        android:title="@string/fb"
        app:showAsAction="always"
        android:icon="@drawable/fb_android" 
        android:menuCategory="container"/>
        
      <item
        android:id="@+id/item3"
        android:orderInCategory="99"
        android:title="@string/fb"
        app:showAsAction="always"
        android:icon="@drawable/question" 
        android:menuCategory="container"/>
     
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"
        android:menuCategory="container"
         android:icon="@drawable/icon_settings"/>

</menu>
