<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header"
        android:minHeight="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/display_violations"
        android:textStyle="bold" />

    <TableLayout        
        android:id="@+id/tabLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:minHeight="44dp"
                android:background="@drawable/tableheader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"                
                android:textStyle="bold" 
                android:text="@string/display_date"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/textView2"
                android:minHeight="44dp"
                android:background="@drawable/tableheader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"                
                android:textStyle="bold" 
                android:text="@string/display_vln"
                android:textColor="#FFFFFF"/>
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tablecell"
                android:gravity="center_vertical"
                android:minHeight="44dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"                
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:minHeight="44dp"
                android:background="@drawable/tablecell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tablecell"
                android:gravity="center_vertical"
                android:minHeight="44dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:minHeight="44dp"
                android:background="@drawable/tablecell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />            

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tablecell"
                android:gravity="center_vertical"
                android:minHeight="44dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"                
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:minHeight="44dp"
                android:background="@drawable/tablecell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tablecell"
                android:gravity="center_vertical"
                android:minHeight="44dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"                
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:minHeight="44dp"
                android:background="@drawable/tablecell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />            

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tablecell"
                android:gravity="center_vertical"
                android:minHeight="44dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"                
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:minHeight="44dp"
                android:background="@drawable/tablecell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tablecell"
                android:gravity="center_vertical"
                android:minHeight="44dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"                
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"                
                android:minHeight="44dp"
                android:background="@drawable/tablecell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView15" 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/tablecell"
                android:gravity="center_vertical"
                android:minHeight="44dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"                
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"                
                android:minHeight="44dp"
                android:background="@drawable/tablecell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

        </TableRow>

    </TableLayout>

</LinearLayout>
